--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
-    "build": "react-scripts build",
+    "build": "react-scripts docs",
     "eject": "react-scripts eject",
     "fix": "prettier --write src",
     "lint": "prettier --check src",
