--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
+    - run: npm run export
 
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@v4.2.3
