--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
       "last 1 safari version"
     ]
   },
+  "homepage": "https://rostyslavkravchenko.github.io/wardle/",
   "devDependencies": {
     "autoprefixer": "^10.4.2",
     "husky": "^7.0.4",
